card & detalils working for mobile + web

--- a/client/index.html
+++ b/client/index.html
@@ -84,5 +84,75 @@
         </div>
     </div>
   </section>
+
+  <section id="item-details">
+    <div id="item-details-container">
+        <div class="p-1"><h1>Item Details</h1></div>
+        <div class="details-key-value-container">
+            <div class="detail detail-key">Ingredients</div>
+            <div class="detail detail-value">
+              <span class="clr-red">Maida</span> |
+              <span class="clr-red">Khoya</span> |
+              <span class="clr-red">Sugar</span> |
+              <span class="clr-red">Oil</span>
+            </div>
+        </div>
+        <div class="details-key-value-container">
+            <div class="detail detail-key">Taste</div>
+            <div class="detail detail-value">
+              <span>Plain</span> |
+              <span>Salted</span> |
+              <span class="clr-red">Sweet</span> |
+              <span>Masala</span>
+            </div>
+        </div>
+        <div class="details-key-value-container">
+            <div class="detail detail-key">Cooking Style</div>
+            <div class="detail detail-value">
+              <span>Roasted</span> |
+              <span class="clr-red">Fried</span> |
+              <span>Baked</span> |
+              <span>Raw</span>
+            </div>
+        </div>
+        <div class="details-key-value-container">
+            <div class="detail detail-key">Shelf Life</div>
+            <div class="detail detail-value">
+              <span class="clr-red">1</span> |
+              <span >2</span> |
+              <span>3</span> |
+              <span>4</span>
+              <span class="clr-red">  (weeks)</span>
+            </div>
+        </div>
+        <div class="details-key-value-container">
+            <div class="detail detail-key">Vendor Name</div>
+            <div class="detail detail-value"><span class="clr-red">Sunanda Foods</span></div>
+        </div>
+        <div class="details-key-value-container">
+            <div class="detail detail-key">FSSAI</div>
+            <div class="detail detail-value"><span class="clr-red">FS0001</span></div>
+        </div>
+        <div class="details-key-value-container">
+            <div class="detail detail-key">Vendor Location</div>
+            <div class="detail detail-value"><span class="clr-red">Pune</span></div>
+        </div>
+        <div class="details-key-value-container">
+            <div class="detail detail-key">Vendor Rating</div>
+            <div class="detail detail-value">
+              <span>
+              <i class="fas fa-star f-sm-4x f-c-gold"></i>
+              <i class="fas fa-star f-sm-4x f-c-gold"></i>
+              <i class="fas fa-star f-sm-4x f-c-gold"></i>
+              <i class="fas fa-star f-sm-4x f-c-gold"></i>
+              <i class="fas fa-star f-sm-4x"></i></span>
+            </div>
+        </div>
+        <div class="details-key-value-container">
+            <a href="" class="btn btn-back">Back</a>
+        </div>     
+      </div>
+  </section>
 </body>
+  <script src="js/main.js"></script>
 </html>
