dom rendering from object

--- a/client/index.html
+++ b/client/index.html
@@ -26,63 +26,6 @@
     </div>
   </nav>
   <section id="cards-container">
-    <div class="card">
-      <div class="details-icon">
-          <i class="fas fa-ellipsis-v"></i>
-      </div>     
-      <div class="card-content">
-        <img src="img/gujiya.png" alt="" class="item-image">
-        <h4 class="p-1">Gujia</h4>
-        <i class="fas fa-star f-sm-4x f-c-gold"></i>
-        <i class="fas fa-star f-sm-4x f-c-gold"></i>
-        <i class="fas fa-star f-sm-4x f-c-gold"></i>
-        <i class="fas fa-star f-sm-4x f-c-gold"></i>
-        <i class="fas fa-star f-sm-4x"></i>
-        <p class="f-sm-4x p-1">Local Delicacy From - North India</p>
-        <p class="f-sm-4x p-1">A sweet deep-fried dumpling made with suji or maida and stuffed with a mixture of sweetened khoya and dried fruits.</p>
-        <p class="f-sm-4x p-1">Minimum Order - 1 kg</p>
-        <div class="p-1"><i class="fas fa-rupee-sign"></i> 350</div>
-        <a href="#" class="btn">Add To Cart</a>
-      </div>
-    </div>
-    <div class="card">
-        <div class="details-icon">
-            <i class="fas fa-ellipsis-v"></i>
-        </div>     
-        <div class="card-content">
-          <img src="img/gujiya.png" alt="" class="item-image">
-          <h4 class="p-1">Gujia</h4>
-          <i class="fas fa-star f-sm-4x f-c-gold"></i>
-          <i class="fas fa-star f-sm-4x f-c-gold"></i>
-          <i class="fas fa-star f-sm-4x f-c-gold"></i>
-          <i class="fas fa-star f-sm-4x f-c-gold"></i>
-          <i class="fas fa-star f-sm-4x"></i>
-          <p class="f-sm-4x p-1">Local Delicacy From - North India</p>
-          <p class="f-sm-4x p-1">A sweet deep-fried dumpling made with suji or maida and stuffed with a mixture of sweetened khoya and dried fruits.</p>
-          <p class="f-sm-4x p-1">Minimum Order - 1 kg</p>
-          <div class="p-1"><i class="fas fa-rupee-sign"></i> 350</div>
-          <a href="#" class="btn">Add To Cart</a>
-        </div>
-    </div>
-    <div class="card">
-        <div class="details-icon">
-            <i class="fas fa-ellipsis-v"></i>
-        </div>     
-        <div class="card-content">
-          <img src="img/gujiya.png" alt="" class="item-image">
-          <h4 class="p-1">Gujia</h4>
-          <i class="fas fa-star f-sm-4x f-c-gold"></i>
-          <i class="fas fa-star f-sm-4x f-c-gold"></i>
-          <i class="fas fa-star f-sm-4x f-c-gold"></i>
-          <i class="fas fa-star f-sm-4x f-c-gold"></i>
-          <i class="fas fa-star f-sm-4x"></i>
-          <p class="f-sm-4x p-1">Local Delicacy From - North India</p>
-          <p class="f-sm-4x p-1">A sweet deep-fried dumpling made with suji or maida and stuffed with a mixture of sweetened khoya and dried fruits.</p>
-          <p class="f-sm-4x p-1">Minimum Order - 1 kg</p>
-          <div class="p-1"><i class="fas fa-rupee-sign"></i> 350</div>
-          <a href="#" class="btn">Add To Cart</a>
-        </div>
-    </div>
   </section>
 
   <section id="item-details">
@@ -154,5 +97,6 @@
       </div>
   </section>
 </body>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
   <script src="js/main.js"></script>
 </html>
